Bootstrap Map generator

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,5 +1,6 @@
 
 player = files('Player.c')
+map = files('Map.c')
 console = files('Console.c')
 
-sources = player + console
+sources = player + map + console
