--- a/test/meson.build
+++ b/test/meson.build
@@ -4,14 +4,21 @@ unity_dependency = unity_subproject.get_variable('unity_dep')
 unity_gen_runner = unity_subproject.get_variable('gen_test_runner')
 
 player += files('TestPlayer.c')
-
-player01 = executable('player01',
+test('player', executable('player',
   sources: [
     player,
     unity_gen_runner.process('TestPlayer.c')
   ],
   include_directories: [ inc ],
   dependencies: [ unity_dependency ],
-)
+))
 
-test('player-01', player01)
+map += files('TestMap.c')
+test('map', executable('map',
+  sources: [
+    map,
+    unity_gen_runner.process('TestMap.c')
+  ],
+  include_directories: [ inc ],
+  dependencies: [ unity_dependency ],
+))
