--- a/test/meson.build
+++ b/test/meson.build
@@ -1,7 +1,6 @@
 
-unity_subproject = subproject('unity')
-unity_dependency = unity_subproject.get_variable('unity_dep')
-unity_gen_runner = unity_subproject.get_variable('gen_test_runner')
+unity_sp = subproject('unity')
+unity_gen_runner = unity_sp.get_variable('gen_test_runner')
 
 testing = [
   { 'name': 'player', 'source': player, 'file': 'TestPlayer.c' },
@@ -16,6 +15,9 @@ foreach test : testing
       unity_gen_runner.process(test['file'])
     ],
     include_directories: [ inc ],
-    dependencies: [ unity_dependency ],
+    dependencies: [ 
+      unity_sp.get_variable('unity_dep'), 
+      yaml_sp.get_variable('yaml_dep') 
+    ],
   ))
 endforeach
