Remove Game actual implementation

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,7 +1,5 @@
 main = files('main.c')
 player = files('Player.c')
 map = files('Map.c')
-game = files('Game.c')
 
-game += player + map
-sources = main + game
+sources = main + player + map
