Implements inventory and items management

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,7 @@
 main = files('main.c')
-player = files('player.c')
+core = files(
+    'inventory.c',
+    'player.c',
+)
 
-sources = main + player
+sources = main + core
