--- a/meson.build
+++ b/meson.build
@@ -9,7 +9,6 @@ project('adventure', 'c',
 )
 
 ncurses_dep = dependency('ncurses')
-yaml_sp = subproject('yaml')
 inc = include_directories('src')
 
 subdir('src')
@@ -18,5 +17,5 @@ subdir('test')
 executable('adventure',
   sources: sources,
   include_directories: [ inc ],
-  dependencies: [ ncurses_dep, yaml_sp.get_variable('yaml_dep') ],
+  dependencies: [ ncurses_dep ],
 )
