Implements dungeon with connected rooms

--- a/test/meson.build
+++ b/test/meson.build
@@ -5,6 +5,7 @@ unity_gen_runner = unity_sp.get_variable('gen_test_runner')
 testing = [
   { 'name': 'player', 'file': 'test_player.c' },
   { 'name': 'inventory', 'file': 'test_inventory.c' },
+  { 'name': 'dungeon', 'file': 'test_dungeon.c' },
 ]
 
 foreach test : testing
